# BreakoutEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
cmake/: BreakoutConfig.cmake.in
example/: CMakeLists.txt  Icon.rc  Sandbox.brk  Static.hpp  TestSystem.cpp  TestSystem.hpp  main.cpp
example/Data/Scenes/: Scene0.brkscn  Scene1.brkscn
example/Data/Shaders/: frag1.hlsl
source/: CMakeLists.txt  PCH.hpp  PlatformMacros.hpp  main.cpp
source/app/: App.cpp  App.hpp  CMakeLists.txt  Entry.cpp  Entry.hpp  RegisterComponents.cpp  TypeRegistration.cpp  Window.cpp
source/core/: AllocTracker.cpp  AllocTracker.hpp  Alloca.hpp  App.cpp  App.hpp  Assert.cpp  Assert.hpp  Bitset.hpp  Bitset.inl  CMakeLists.txt  DebugBreak.cpp  DebugBreak.hpp  EnumFlags.hpp  EnumFlags.inl  Event.hpp  Event.inl  FieldList.hpp  Function.hpp  Function.inl  Hash.hpp  Hash.inl  IO.cpp  IO.hpp  InputFile.cpp  InputFile.hpp  Loaders.hpp  Loaders.inl  LoadersFwd.hpp  LogManager.cpp  LogManager.hpp  MemoryPool.cpp  MemoryPool.hpp  MemoryPool.inl  MemoryPoolFwd.hpp  MetaLists.hpp  PlatformMacros.hpp  RNG.cpp  RNG.hpp  Resource.cpp  Resource.hpp  (+41 more)
source/debug/: CMakeLists.txt  DebugOverlay.cpp  DebugOverlay.hpp  GameObjectInfoComponent.cpp  GameObjectInfoComponent.hpp
source/ecs/: CMakeLists.txt  Component.hpp  ComponentFwd.hpp  ComponentRegistry.cpp  ComponentRegistry.hpp  ComponentRegistry.inl  ECSManager.cpp  ECSManager.hpp  GameObject.hpp  Query.hpp  Query.inl  SceneManager.cpp  SceneManager.hpp  System.cpp  System.hpp  System.inl  World.hpp  World.inl  WorldFwd.hpp
source/editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  Project.hpp
source/editor/ui/: ComponentWidgets.cpp  ComponentWidgets.hpp  ImportFonts.cpp  Inspector.cpp  Inspector.hpp  MenuBar.cpp  Menubar.hpp  MiscWidgets.cpp  MiscWidgets.hpp  Outliner.cpp  Outliner.hpp  ResourceExplorer.cpp  SceneCreation.cpp  SceneCreation.hpp  SceneSelection.cpp  SceneSelection.hpp  StartupWindow.cpp  StartupWindow.hpp  UiData.cpp  UiData.hpp
source/imgui/: CMakeLists.txt  ComponentWidgets.cpp  ComponentWidgets.hpp  DebugOverlay.cpp  DebugOverlay.hpp  DevUiContext.cpp  DevUiContext.hpp  GameObjectInfoComponent.cpp  GameObjectInfoComponent.hpp  MaterialWidgets.cpp  MaterialWidgets.hpp  MeshWidget.cpp  MeshWidget.hpp  MiscWidgets.cpp  MiscWidgets.hpp  TextureWidget.cpp  TextureWidget.hpp
source/managers/: CMakeLists.txt  ECSManager.cpp  ECSManager.hpp  ECSManager.inl  ResourceManager.cpp  ResourceManager.hpp  ResourceManager.inl  SceneManager.cpp  SceneManager.hpp
source/math/: CMakeLists.txt  Constants.hpp  Matrix.hpp  Quaternion.hpp  Quaternion.inl  Transform.hpp  Vector.hpp  Vector2.inl  Vector3.inl  Vector4.inl  VectorCommon.inl
source/rendering/: Buffer.hpp  CMakeLists.txt  Material.cpp  Material.hpp  Material.inl  MaterialWidgets.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Resource.hpp  Shaders.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
source/rendering/dx11/: Buffer.cpp  ObjectRef.hpp  Renderer.cpp  Renderer.hpp  ResourceHandles.cpp  ResourceHandles.hpp  Shaders.cpp  Shaders.hpp  Texture.cpp  TypeDefs.hpp
source/rendering/sdl2/: Renderer.cpp
source/systems/: CMakeLists.txt  ECSManager.cpp  ECSManager.hpp  ECSManager.inl  ImportFonts.cpp  InputEventTypes.hpp  InputSystem.cpp  InputSystem.hpp  ResourceLoadingComponents.hpp  ResourceLoadingSystem.cpp  ResourceLoadingSystem.hpp  TransformComponent.cpp  TransformComponent.hpp  VisualComponents.cpp  VisualComponents.hpp  VisualSystem.cpp  VisualSystem.hpp  WindowSystem.cpp  WindowSystem.hpp
source/systems/private/: ImGuiIncludes.hpp  Init.cpp  Init.hpp
source/tools/: Base85.hpp  CMakeLists.txt  DataEmbed.cpp  DataEmbed.hpp  EmbedAsset.cpp  ImGuiDemo.cpp  ULIDGen.cpp
tests/: CMakeLists.txt  CoreTests.cpp  MathTests.cpp
tests/core/: Bitset.cpp  CMakeLists.txt  EnumFlags.cpp  Enumerator.cpp  EventTests.cpp  FunctionTests.cpp  HashTests.cpp  IO.cpp  InputFile.cpp  Memory.cpp  ResourceLoaderTests.cpp  RetainPtr.cpp  SignalTests.cpp  StringViewTests.cpp  ThreadPoolTests.cpp  ULIDTests.cpp  Utf8.cpp  main.cpp  thread_main.cpp
tests/ecs/: CMakeLists.txt  ManagerTests.cpp  main.cpp
tests/loading/: CMakeLists.txt  ComponentInfoTests.cpp  ProjectLoadingTests.cpp  SceneLoadingTests.cpp  main.cpp
tests/loading/data/: testProj.brk  test_scene0.brkscn
tests/managers/: CMakeLists.txt  ResourceManagementTests.cpp  main.cpp
tests/math/: CMakeLists.txt  QuaternionTests.cpp  VectorTests.cpp  main.cpp
tests/systems/: CMakeLists.txt  ECSManagerTests.cpp  ResourceLoadingTests.cpp  main.cpp
tests/tools/: AssetEmbedding.cpp  Base85Tests.cpp  CMakeLists.txt  Lorem.txt
